--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
         function markAsPaid() {
             if (!currentTicket) return;
             
-            // Aquí podrías guardar el ticket en localStorage para tener un historial
+            // Aquí se guarda el ticket en localStorage para tener un historial
             // Por ahora simplemente limpiamos el carrito y ocultamos el ticket
             
             cart = [];
@@ -873,3 +873,4 @@
     </script>
 </body>
 </html>
+
